--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,7 +7,7 @@
 <div th:fragment="footer">
     <hr />
     <div style="font-family: arial; text-align: center;">
-        <a target="_blank" href="https://github.com/photothinik">Photothinik</a> - Financial Expense Analyzer
+        Financial Expense Analyzer
     </div>
 </div>
 </body>
