--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Photothinik Financial Expense Analyzer</title>
+    <title>Financial Expense Analyzer</title>
     <link th:href="@{/styles/main.css}" rel="stylesheet" />
 </head>
 <body>
@@ -14,7 +14,16 @@
     <div th:replace="~{fragments/menu :: menu}">Menu</div>
 </div>
 
-Categories
+<div class="pagebody">
+    <div class="pageheader">
+        Categories
+    </div>
+
+    <div class="categorymain" th:each="category: ${categories}">
+        <div th:text="${category.name}" />
+    </div>
+
+</div>
 
 <div style="clear: both;"></div>
 
