--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Photothinik Financial Expense Analyzer</title>
+    <title>Financial Expense Analyzer</title>
     <link th:href="@{/styles/main.css}" rel="stylesheet" />
 </head>
 <body>
