--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -8,10 +8,13 @@
     <div th:fragment="menu">
         <ul class="menu">
             <li>
-                <a href="/">Home</a>
+                <a href="/">Summary</a>
             </li>
             <li>
                 <a href="/categories">Categories</a>
+            </li>
+            <li>
+                <a href="/data">Load Data</a>
             </li>
         </ul>
     </div>
