--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -14,7 +14,7 @@
                 <a href="/categories">Categories</a>
             </li>
             <li>
-                <a href="/data">Load Data</a>
+                <a href="/data">Manage Data</a>
             </li>
         </ul>
     </div>
