--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -1,11 +1,53 @@
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
 .header {
     padding-left: 40px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     font-family: arial;
     font-size: 24pt;
     font-weight: bold;
-    border-bottom: 1px solid black;
+    /*border-bottom: 1px solid black;*/
+    background-color: rgb(112,146,190);
+    color: rgb(255,242,0);
+    margin-left: 215px;
+}
+
+ul.menu {
+    width: 215px;
+    height: 100%;
+    position: fixed;
+    font-family: arial;
+    font-size: 16pt;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(112,146,190, 0.5);
+}
+
+ul.menu a {
+    display: block;
+    text-decoration: none;
+    /*background-color: rgb(239,228,176);*/
+    /*background-color: rgba(112,146,190, 0.5);*/
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: right;
+    border-radius: 5px;
+    /*border-bottom: 1px solid black;*/
+    color: black;
+}
+
+ul.menu a:hover {
+    /*background-color: white;*/
     background-color: rgb(112,146,190);
     color: rgb(255,242,0);
 }
@@ -13,7 +55,7 @@
 .pagebody {
     display: block;
     margin: 15px;
-    margin-left: 215px;
+    margin-left: 230px;
 }
 
 .pageheader {
@@ -25,7 +67,9 @@
 }
 
 .standardButton {
-    background-color: red;
+    /*background-color: red;*/
+    background-color: rgb(112,146,190);
+    color: rgb(255,242,0);
     padding: 10px;
     font-family: arial;
     font-size: 12pt;
@@ -67,12 +111,12 @@
 }
 
 .reportCategoryPanel {
-    width: 60%;
+    width: 100%;
 }
 
 .reportCategoryHeadingRow {
-    color: yellow;
-    background-color: rgb(100,130,170);
+    color: black;
+    background-color: rgba(112,146,190, 0.5);
     border-radius: 5px;
     padding: 8px;
     margin-top: 10px;
@@ -83,7 +127,8 @@
 }
 
 .reportCategoryHeadingRow:hover {
-    background-color: rgb(80,120,150);
+    background-color: rgb(112,146,190);
+    color: rgb(255,242,0);
 }
 
 .reportCategoryHeading {
@@ -104,31 +149,32 @@
     border: 1px solid black;
     border-radius: 3px;
     margin: 2px;
+    font-famiyl: arial;
 }
 
 .recordItemTrDt {
     display: inline-block;
-    width: 200px;
+    width: 10%;
 }
 
 .recordItemDesc {
     display: inline-block;
-    width: 350px;
+    width: 40%;
 }
 
 .recordItemAmt {
     display: inline-block;
-    width: 100px;
+    width: 10%;
 }
 
 .recordItemChkNum {
     display: inline-block;
-    width: 100px;
+    width: 10%;
 }
 
 .recordItemAssignTo {
     display: inline-block;
-    width: 150px;
+    width: 15%;
 }
 
 
@@ -156,13 +202,16 @@
 
 
 .categorymain {
-    display: inline-block;
-    width: 350px;
+    /*display: inline-block;*/
+    display: block;
+    /*width: 350px;*/
+    width: 70%;
     padding: 5px;
     margin-top: 10px;
     margin-bottom: 10px;
     /*border: 5px solid rgb(196,233,242);*/
-    background-color: rgb(196,233,242);
+    background-color: rgba(196,233,242, 0.5);
+    border: 1px solid rgb(196,233,242);
     border-radius: 5px;
     cursor: default;
 }
@@ -327,27 +376,3 @@
     margin-left: 10px;
 }
 
-ul.menu {
-    width: 200px;
-    font-family: arial;
-    font-size: 16pt;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-ul.menu a {
-    display: block;
-    text-decoration: none;
-    background-color: rgb(239,228,176);
-    padding-top: 20px;
-    padding-bottom: 20px;
-    text-align: center;
-    border-bottom: 1px solid black;
-    color: black;
-}
-
-ul.menu a:hover {
-    background-color: white;
-    color: black;
-}
